--- a/15_login/templates/error.html
+++ b/15_login/templates/error.html
@@ -10,7 +10,7 @@
     <h1>DIRTY DASHERS</h1>
     <h2><i>Nahi Khan and Ahmed Sultan<i></h2>
 
-    <span>Login failed: invalid username or password.</span>
+    <span>Login failed: <b>{{ error }}</b></span>
     <br> <br> 
     
     <form action="/">
