--- a/15_login/templates/welcome.html
+++ b/15_login/templates/welcome.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 
 <html>
@@ -12,7 +13,7 @@
     
     <h1>WELCOME!</h1>
 
-    <form action="/">
+    <form action="/logout">
         <input type="submit" name="logout" value="Logout">
     </form>
 </body>
