--- a/16_flasherit/templates/error.html
+++ b/16_flasherit/templates/error.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
+{% extends "parent.html" %}
 
-<html>
+{% block head %}
+<h1> Error! </h1>
+{% endblock %}
 
-<head>
-    <title>Error</title>
-</head>
+{% block title %}
+Error message
+{% endblock %}
 
-<body>
-    <h1>DIRTY DASHERS</h1>
-    <h2><i>Nahi Khan and Ahmed Sultan<i></h2>
-
-    <span>Login failed: <b>{{ error }}</b></span>
-    <br> <br> 
-    
-    <form action="/">
-        <input type="submit" name="retry" value="Retry">
-    </form>
-</body>
-
-</html>
+{% block content %}
+  {% for message in get_flashed_messages() %}
+  {{ message }}<br>
+  {% endfor %}
+{% endblock %}
