--- a/16_flasherit/templates/error.html
+++ b/16_flasherit/templates/error.html
@@ -1,15 +1,21 @@
-{% extends "parent.html" %}
+<!DOCTYPE html>
 
-{% block head %}
-<h1> Error! </h1>
-{% endblock %}
+<html>
 
-{% block title %}
-Error message
-{% endblock %}
+<head>
+    <title>Error</title>
+</head>
 
-{% block content %}
-  {% for message in get_flashed_messages() %}
-  {{ message }}<br>
-  {% endfor %}
-{% endblock %}
+<body>
+    <h1>DIRTY DASHERS</h1>
+    <h2><i>Nahi Khan and Ahmed Sultan<i></h2>
+
+    <span>Login failed: <b>{{ error }}</b></span>
+    <br> <br> 
+    
+    <form action="/">
+        <input type="submit" name="retry" value="Retry">
+    </form>
+</body>
+
+</html>
